--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.ssehub.studentmgmt</groupId>
+			<artifactId>stu-mgmt-testing-docker</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.8.1</version>
