--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
 			<artifactId>jersey-media-json-binding</artifactId>
 			<version>3.0.3</version>
 		</dependency>
+		<dependency> <!-- Fixes a warning when starting the server; not strictly needed -->
+			<groupId>jakarta.activation</groupId>
+			<artifactId>jakarta.activation-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
