--- a/pom.xml
+++ b/pom.xml
@@ -180,9 +180,9 @@
 			<version>3.0.3</version>
 		</dependency>
 		<dependency> <!-- Fixes a warning when starting the server; not strictly needed -->
-			<groupId>jakarta.activation</groupId>
-			<artifactId>jakarta.activation-api</artifactId>
-			<version>2.0.1</version>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>3.0.2</version>
 		</dependency>
 
 		<dependency>
