--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
 		<dependency>
 			<groupId>net.ssehub.studentmgmt</groupId>
 			<artifactId>backend_api</artifactId>
-			<version>1.1.1</version>
+			<version>1.1.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
