--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>net.ssehub.teaching.exercise_submitter</groupId>
 	<artifactId>exercise-submitter-server</artifactId>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.1.0</version>
 
 	<organization>
 		<name>Software Systems Engineering, University of Hildesheim</name>
